frontend is completed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,23 +9,25 @@
    <title>Middleware Lab</title>
 </head>
 <body>
+   <h1>Middleware Exercises</h1>
    <label for="input">Enter an animal</label>
    <input type="text" id="input">
    <button>Animal found?</button>
-   <p></p>
+   <h2 id="verify"></h2>
+<hr>
    <label for="minVal">Enter a minimum number</label>
-   <input type="number" id="minVal">
+   <input type="number" id="minVal"><br> <br>
    <label for="maxVal">Enter a maximum number</label>
    <input type="number" id="maxVal">
    <button id="random">Pick Random Number</button>
-   <h4></h4>
-
+   <h2 id="randNum"></h2>
+<hr>
    <label for="name">Type a name</label>
    <input type="text" id="name">
    <button id="peek">Peek</button>
    <button id="enqueue">Enqueue</button>
    <button id="dequeue">Dequeue</button>
-   <h3></h3>
+   <h2 id="action"></h2>
 
 </body>
 </html>
